audio_sink and video_sink leakage fixed

https://bugzilla.gnome.org/show_bug.cgi?id=730010